# assgmnts

./: README.md
bookingem/: .gitignore  README.md  pyproject.toml
bookingem/books/: admin.py  models.py  services.py
bookingem/books/management/commands/: create_mock_data.py
bookingem/books/migrations/: 0001_initial.py
bookingem/config/: settings.py
oop/: README.md
oop/src/: encapsulation.py  polymorphism.py  singleton.py  solid_i.py  special_methods.py
sql_indexes_and_transactions/: README.md  populate_db.py  requirements.txt
src/: abstraction.py  combined_zoo.py  inheritance.py  multiple_inheritance.py  singleton.py  solid_i.py  solid_l.py  solid_o.py  solid_s.py
standard_sql/: README.md
