[project]
name = "bookingem"
version = "0.1.0"
description = ""
authors = [
    {name = "uluk001",email = "ulukmanmuratov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "faker (>=37.4.0,<38.0.0)",
    "ruff (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
